--- a/clean/css/style.css
+++ b/clean/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @font-face {
-  font-family: 'icomoon';
+  font-family: 'yu gothic light';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
   src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
   font-weight: normal;
